text overflow resolved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -291,6 +291,9 @@ hr {
 }
 .card-choice__text h3 {
   font-size: 18px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .card-choice__price {
   padding-right: 15px;
@@ -298,6 +301,11 @@ hr {
   justify-content: center;
   align-items: center;
   justify-content: space-between;
+}
+.card-choice__price p:first-child {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .center {
