--- a/sass/utils/_mixinx.scss
+++ b/sass/utils/_mixinx.scss
@@ -17,3 +17,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@mixin overflow {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
